[project]
name = "coursinfo-quarto"
version = "0.1.0"
description = "Cours d'informatique pour tous en CPGE"
requires-python = ">=3.12"

dependencies = [
    "jupyter",
    "jupyterlab",
    "manim",
    "networkx",
    "matplotlib",
    "numpy",
    "bokeh",
    "pandas",
    "scipy",
    "pillow",
    "panflute",
    "jupysql>=0.11.1",
    "seaborn>=0.13.2",
    "imageio>=2.37.3",
    "sympy>=1.14.0",
]

[project.optional-dependencies]
dev = ["ruff", "black", "mypy"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
